Fix height of navbar on candidate report page so that last qn is visible

--- a/admin/webUI/assets/css/custom.css
+++ b/admin/webUI/assets/css/custom.css
@@ -612,7 +612,7 @@ body.home {
 .sticky-sidebar .sticky-sidebar-content {
   position: absolute;
   width: 100%;
-  height: 100vh;
+  height: calc(100vh - 40px);
   overflow-y: auto;
   background: #f5f7f9;
 }
